--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,36 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+html,
+body {
+  height: 100%;
+}
+.app {
+  height: 100vh;
+  background-color: var(--orange-color);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/* Colors */
+
+:root {
+  --orange-color: #ff5c00;
+  --white-color: #ffff;
+  --light-black-color: #2c374f;
+  --light-gray-color: #caced8;
+  --dark-black-color: #1f192f;
+  --gary-color: #54657e;
+  --light-sky-color: #ccebfe;
+  --light-green-color: #17b890;
+  --extra-light-green: #b8ffed;
+  --black-colors: #04103b;
+  --dark-gray-colors: #797d8c;
+  --blue-color: #0075e2;
+  --dark-orange-color: #ff3a29;
+  --off-white-color: #d0d0d0;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+:root {
+  --main-font: "Nunito", sans-serif;
 }
