--- a/src/components/EmployesRecordTable/style.css
+++ b/src/components/EmployesRecordTable/style.css
@@ -20,6 +20,7 @@
 }
 .table td {
   padding: 20px 20px 0px 0px;
+  background-color: var(--white-color);
 }
 .name-des {
   font-size: 11px;
@@ -40,7 +41,6 @@
   color: var(--blue-color);
 }
 .ticket-sold-des {
-  font-family: Nunito;
   font-size: 11px;
   font-weight: 600;
   line-height: 13px;
@@ -61,8 +61,9 @@
   justify-content: center;
   align-items: center;
   margin: auto;
-  margin-top: 25px;
 }
 .user-profile {
   border-radius: 50px;
+  width: 25px;
+  height: 25px;
 }
