--- a/src/components/UsersTable/style.css
+++ b/src/components/UsersTable/style.css
@@ -49,7 +49,7 @@ td:last-child {
 #customers th {
   position: sticky;
   top: 0;
-  background-color: white;
+  background-color: var(--white-color);
   border-radius: 0px;
   z-index: 1;
 }
