--- a/src/components/Button/style.css
+++ b/src/components/Button/style.css
@@ -12,4 +12,7 @@
   line-height: 24px;
   color: var(--white-color);
   height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
