--- a/src/components/EmployesRecordTable/style.css
+++ b/src/components/EmployesRecordTable/style.css
@@ -19,7 +19,7 @@
   color: var(--black-colors);
 }
 .table td {
-  padding: 20px 20px 0px 0px;
+  padding: 5px 20px 0px 0px;
   background-color: var(--white-color);
 }
 .name-des {
@@ -66,4 +66,11 @@
   border-radius: 50px;
   width: 25px;
   height: 25px;
+}
+
+.home-table-loader-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 300px;
 }
