--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -58,7 +58,6 @@
   background-color: var(--white-color);
   text-decoration: underline;
 }
-
 .viewl-all-tours-wrapper {
   display: flex;
   align-items: center;
@@ -68,4 +67,19 @@
 .horizontal-border {
   border-bottom: 1px solid var(--light-sky-color);
   margin-top: 30px;
+}
+.error-message-tours {
+  text-align: center;
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 22px;
+  letter-spacing: 0px;
+  color: var(--dark-orange-color);
+  font-family: var(--main-font);
+  width: 100%;
+  margin-top: 10vh;
+}
+.active-and-upcoming-loader {
+  margin-top: 11vh;
+  text-align: center;
 }
